Fix strange margin in dark mode

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -3,13 +3,11 @@
     filter: invert(1);
     img {
         filter: invert(1);
-
         &.ioda { filter: invert(0); }
     }
 }
 
 body[a="dark"] { @include dark-appearance; }
-
 
 @media (prefers-color-scheme: dark) {
     body[a="auto"] { @include dark-appearance; }
@@ -19,13 +17,20 @@ body[a="dark"] { @include dark-appearance; }
 // bg color is also needed in html in order to
 // block body's background propagation
 // see: https://stackoverflow.com/a/61265706
-html, body {
+html {
+    height: 100%;
     background-color: white;
-    color: black;
-    font-size: 18px;
 }
 
-html { height: 100%; }
+body {
+    background-color: white;
+    color: black;
+    font-family: sans-serif, sans-serif;
+    line-height: 1.4;
+    min-height: 100%;
+    font-size: 18px;
+    margin: 0;
+}
 
 header { text-align: center; }
 
@@ -40,13 +45,6 @@ header { text-align: center; }
         padding: 0.3em;
         margin: 0.3em;
     }
-}
-
-body {
-    font-family: sans-serif, sans-serif;
-    line-height: 1.4;
-    margin: 0.3em;
-    min-height: 100%;
 }
 
 h2, h3, h4, h5 { margin-top: 3em; }
